[tool.poetry]
name = "KernelCNN"
version = "0.1.0"
description = ""
authors = ["dyoshyy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9.10"
numpy = "^1.24.3"
scipy = ">=1.3.0,<1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
